--- a/Train.ipynb
+++ b/Train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
+      "env: CUDA_VISIBLE_DEVICES=3\n"
+     ]
+    }
+   ],
    "source": [
     "%env CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
     "%env CUDA_VISIBLE_DEVICES=3"
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -82,9 +91,92 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0 [0, 0/206] - opening file 2014_94.pckl\n",
+      "Loss: 5.557\n",
+      "Epoch 0 [1, 1/206] - opening file 2014_216.pckl\n",
+      "Loss: 5.331\n",
+      "Epoch 0 [2, 2/206] - opening file 2014_213.pckl\n",
+      "Loss: 5.187\n",
+      "Epoch 0 [3, 3/206] - opening file 2014_254.pckl\n",
+      "Loss: 4.792\n",
+      "Epoch 0 [4, 4/206] - opening file 2014_192.pckl\n",
+      "Loss: 4.995\n",
+      "Epoch 0 [5, 5/206] - opening file 2014_287.pckl\n",
+      "Loss: 4.864\n",
+      "Epoch 0 [6, 6/206] - opening file 2014_34.pckl\n",
+      "[10] 5.191\n",
+      "Loss: 5.137\n",
+      "Epoch 0 [7, 7/206] - opening file 2014_138.pckl\n",
+      "Loss: 3.568\n",
+      "Epoch 0 [8, 8/206] - opening file 2014_172.pckl\n",
+      "Loss: 3.799\n",
+      "Epoch 0 [9, 9/206] - opening file 2014_194.pckl\n",
+      "Loss: 3.460\n",
+      "Epoch 0 [10, 10/206] - opening file 2014_252.pckl\n",
+      "Loss: 2.906\n",
+      "Epoch 0 [11, 11/206] - opening file 2014_261.pckl\n",
+      "Loss: 3.133\n",
+      "Epoch 0 [12, 12/206] - opening file 2014_54.pckl\n",
+      "[20] 4.363\n",
+      "Loss: 4.319\n",
+      "Epoch 0 [13, 13/206] - opening file 2014_132.pckl\n",
+      "Loss: 3.574\n",
+      "Epoch 0 [14, 14/206] - opening file 2014_116.pckl\n",
+      "Loss: 3.944\n",
+      "Epoch 0 [15, 15/206] - opening file 2014_285.pckl\n",
+      "Loss: 3.823\n",
+      "Epoch 0 [16, 16/206] - opening file 2014_91.pckl\n",
+      "Loss: 4.158\n",
+      "Epoch 0 [17, 17/206] - opening file 2014_109.pckl\n",
+      "Loss: 4.057\n",
+      "Epoch 0 [18, 18/206] - opening file 2014_271.pckl\n",
+      "Loss: 4.489\n",
+      "Epoch 0 [19, 19/206] - opening file 2014_145.pckl\n",
+      "Loss: 3.564\n",
+      "Epoch 0 [20, 20/206] - opening file 2014_288.pckl\n",
+      "Loss: 1.956\n",
+      "Epoch 0 [21, 21/206] - opening file 2014_41.pckl\n",
+      "[30] 4.485\n",
+      "Loss: 4.400\n",
+      "Epoch 0 [22, 22/206] - opening file 2014_68.pckl\n",
+      "Loss: 3.965\n",
+      "Epoch 0 [23, 23/206] - opening file 2014_225.pckl\n",
+      "Loss: 3.918\n",
+      "Epoch 0 [24, 24/206] - opening file 2014_236.pckl\n",
+      "Loss: 3.482\n",
+      "Epoch 0 [25, 25/206] - opening file 2014_102.pckl\n",
+      "Loss: 3.688\n",
+      "Epoch 0 [26, 26/206] - opening file 2014_168.pckl\n",
+      "[40] 3.072\n",
+      "Loss: 3.072\n",
+      "Epoch 0 [27, 27/206] - opening file 2014_127.pckl\n",
+      "Loss: 3.651\n",
+      "Epoch 0 [28, 28/206] - opening file 2014_262.pckl\n",
+      "Loss: 1.566\n",
+      "Epoch 0 [29, 29/206] - opening file 2014_202.pckl\n",
+      "Loss: 3.307\n",
+      "Epoch 0 [30, 30/206] - opening file 2014_53.pckl\n",
+      "Loss: 3.742\n",
+      "Epoch 0 [31, 31/206] - opening file 2014_140.pckl\n",
+      "Loss: 3.767\n",
+      "Epoch 0 [32, 32/206] - opening file 2014_129.pckl\n",
+      "Loss: 4.028\n",
+      "Epoch 0 [33, 33/206] - opening file 2014_121.pckl\n",
+      "Loss: 3.417\n",
+      "Epoch 0 [34, 34/206] - opening file 2014_284.pckl\n",
+      "[50] 2.546\n",
+      "Loss: 2.546\n",
+      "Epoch 0 [35, 35/206] - opening file 2014_19.pckl\n"
+     ]
+    }
+   ],
    "source": [
     "len_train = len(D.train_list)\n",
     "while file_cnt<(epochs*len(D.train_list)):\n",
