Change method of saving weights

--- a/Val.ipynb
+++ b/Val.ipynb
@@ -28,13 +28,13 @@
      "output_type": "stream",
      "text": [
       "env: CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
-      "env: CUDA_VISIBLE_DEVICES=3\n"
+      "env: CUDA_VISIBLE_DEVICES=0\n"
      ]
     }
    ],
    "source": [
     "%env CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
-    "%env CUDA_VISIBLE_DEVICES=3"
+    "%env CUDA_VISIBLE_DEVICES=0"
    ]
   },
   {
@@ -49,34 +49,41 @@
     "batch_size = 50\n",
     "max_seq_length = 300\n",
     "min_seq_length = 5\n",
+    "emb_size = 128\n",
+    "hid_size = 128\n",
     "num_classes = 267+1\n",
     "cuda_flag = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "with open('/home/a/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# data loader\n",
     "D = DataLoader(batch_size=batch_size,\n",
     "   data_dir='data/batches/',\n",
-    "    mode='val', max_seq_length=max_seq_length, min_seq_length=min_seq_length)\n"
+    "    mode='val', max_seq_length=max_seq_length, min_seq_length=min_seq_length)\n",
+    "\n",
+    "# load model\n",
+    "model = RETAIN(emb_size,hid_size,num_classes,cuda_flag)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,55 +100,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "retain_bi_500.pth\n",
-      "Top-1 accuracy: 10384/37411 = 0.278\n",
-      "Top-5 accuracy: 21579/37411 = 0.577\n",
-      "retain_bi_1000.pth\n",
-      "Top-1 accuracy: 11372/37411 = 0.304\n",
-      "Top-5 accuracy: 23362/37411 = 0.624\n",
-      "retain_bi_1500.pth\n",
-      "Top-1 accuracy: 10818/37411 = 0.289\n",
-      "Top-5 accuracy: 22879/37411 = 0.612\n",
-      "retain_bi_2000.pth\n",
-      "Top-1 accuracy: 11107/37411 = 0.297\n",
-      "Top-5 accuracy: 23157/37411 = 0.619\n",
-      "retain_bi_2500.pth\n",
-      "Top-1 accuracy: 11587/37411 = 0.310\n",
-      "Top-5 accuracy: 23325/37411 = 0.623\n",
-      "retain_bi_3000.pth\n",
-      "Top-1 accuracy: 11065/37411 = 0.296\n",
-      "Top-5 accuracy: 23218/37411 = 0.621\n",
-      "retain_bi_3500.pth\n",
-      "Top-1 accuracy: 11111/37411 = 0.297\n",
-      "Top-5 accuracy: 23006/37411 = 0.615\n",
-      "retain_bi_4000.pth\n",
-      "Top-1 accuracy: 11398/37411 = 0.305\n",
-      "Top-5 accuracy: 23107/37411 = 0.618\n",
-      "retain_bi_4500.pth\n",
-      "Top-1 accuracy: 10441/37411 = 0.279\n",
-      "Top-5 accuracy: 22339/37411 = 0.597\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-53b4acdd3100>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0mcnt\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0minput_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist_to_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m             \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0mtargets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLongTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtargets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# to only use last of each sequence\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/github/EHRVis/models/retain_bidirectional.py\u001b[0m in \u001b[0;36mlist_to_tensor\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m     89\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvisit\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvisit\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 91\u001b[0;31m                     \u001b[0minput_tensor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0minput_tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;31m# embedded =  torch.mm(input_tensor, self.emb) # [samples*sequences, hidden]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/autograd/variable.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m     83\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mMaskedFill\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mSetItem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__deepcopy__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmemo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/pytorch/lib/python3.5/site-packages/torch/autograd/_functions/tensor.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(ctx, i, index, value)\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor_value\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m         \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "retain_bi_14500.pth\n",
+      "Top-1 accuracy: 13400/37411 = 0.358\n",
+      "Top-5 accuracy: 25950/37411 = 0.694\n",
+      "retain_bi_15000.pth\n",
+      "Top-1 accuracy: 13400/37411 = 0.358\n",
+      "Top-5 accuracy: 25950/37411 = 0.694\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "for num in np.arange(500,6500,500):\n",
+    "for num in np.arange(14500,17000,500):\n",
     "    ver = 'retain_bi_%d.pth'%num\n",
-    "    model = torch.load(os.path.join('/home/mjc/github/EHRVis/data/saved_weights',ver))\n",
+    "    model.load_state_dict(torch.load(os.path.join('/home/mjc/github/EHRVis/data/saved_weights',ver)))\n",
     "    model.eval()\n",
     "    # test model\n",
     "    cnt = 0\n",
