Changed cpu model saving method

--- a/Train.ipynb
+++ b/Train.ipynb
@@ -20,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%env CUDA_DEVICE_ORDER=PCI_BUS_ID\n",
@@ -88,6 +90,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -126,6 +129,7 @@
     "                model.cpu()\n",
     "            model2.load_state_dict(model.state_dict())\n",
     "            torch.save(model2.state_dict(),'data/saved_weights/retain_bi_%d_cpu.pth'%(cnt))\n",
+    "            del model2\n",
     "            if cuda_flag:\n",
     "                model.cuda()\n",
     "            print(\"Saving at %dth step\"%cnt)\n",
@@ -176,15 +180,6 @@
     "# lr_counter+=1\n",
     "lr = lr_list[lr_counter]\n",
     "opt = optim.Adam(model.parameters(), lr=lr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lr"
    ]
   },
   {
